modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -81,8 +81,8 @@ localhost = 127.0.0.1
 # dns-server = 8.8.8.8
 # mtu = 1280
 # peer = (public-key = fWO8XS9/nwUQcqnkfBpKeqIqbzclQ6EKP20Pgvzwclg=, allowed-ips = 0.0.0.0/0, endpoint = 192.168.20.6:51820)
-MERGE-PROXY = merge-proxy, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc
 
+# {group name} = select, {proxies, ...}, {policy-path}, {policy-regex-filter}, hidden = {hidden}, include-all-proxies = {include-all-proxies}, include-other-group = "{include-other-group}"
 
 [Proxy Group]
 # proxy group whose selected proxy can be changed manually
@@ -92,17 +92,13 @@ MERGE-PROXY = merge-proxy, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fc
 # AutoTestGroup = url-test, ProxySOCKS5, ProxySOCKS5TLS, url=http://www.gstatic.com/generate_204, interval=600, tolerance=100, timeout=5, hidden=true
 
 # proxy group with a external proxies list url
-# SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$ 
+SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$ 
 
-# FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
+FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
 
 # 集合 = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
-🔰 全局代理 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇸🇬 新加坡节点, DIRECT
 
-🇭🇰 香港节点 = url-test, include-other-group=MERGE-PROXY, policy-regex-filter=香港|HK|Hong Kong, interval=600, tolerance=80
-🇺🇸 美国节点 = url-test, include-other-group=MERGE-PROXY, policy-regex-filter=美国|US|United States, interval=600, tolerance=80
-🇯🇵 日本节点 = url-test, include-other-group=MERGE-PROXY, policy-regex-filter=日本|JP|Japan, interval=600, tolerance=80
-🇸🇬 新加坡节点 = url-test, include-other-group=MERGE-PROXY, policy-regex-filter=新加坡|SG|Singapore, interval=600, tolerance=80
+🇭🇰 香港节点 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=香港|HK|Hong Kong, interval=600, tolerance=80
 
 # 🇭🇰香港 = url-test, policy-path=SSP, FacMata, interval=300, policy-regex-filter=(?i)(香港|HKG)
 
