modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -48,8 +48,8 @@ localhost = 127.0.0.1
 
 [Proxy]
 # build in policy
-# On = direct
-# Off = reject
+DIRECT = direct
+REJECT = reject
 
 # http proxy
 # ProxyHTTP = http, 1.2.3.4, 443, username, password
@@ -97,6 +97,8 @@ SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api
 FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
 
 # 集合 = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
+
+🔰 全局代理 = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇸🇬 新加坡节点, DIRECT
 
 🇭🇰 香港节点 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=香港|HK|Hong Kong, interval=600, tolerance=80
 
