modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -53,38 +53,32 @@ REJECT = reject
 
 
 [Proxy Group]
-SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$ 
+SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$, hidden=true
 
-FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$
+FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!剩余|官|重置|到期|告|续费).)*$, hidden=true
 
 🔰 全局代理 = select, 🇭🇰 香港, 🇺🇸 美国, 🇯🇵 日本, 🚀直连, 集合
 
 集合 = url-test, include-other-group=SSP, include-other-group=FacMata, interval=600, tolerance=80
 
-🇭🇰 香港 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=香港|HK|Hong Kong, interval=600, tolerance=80
+🇭🇰 香港 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)香港|HK|Hong Kong", interval=600, tolerance=80
 
-🇺🇸 美国 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=美国|USA, interval=600, tolerance=80
+🇺🇸 美国 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)美|us|unitedstates|united states", interval=600, tolerance=80
 
-🇯🇵 日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=日本|JP, interval=600, tolerance=80
+🇯🇵 日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)日|jp|japan", interval=600, tolerance=80
+
+🌐 其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)^(?!.*(?:🇭🇰|🇯🇵|🇺🇸|🇸🇬|🇨🇳|港|hk|hongkong|台|tw|taiwan|日|jp|japan|新|sg|singapore|美|us|unitedstates)).*" interval=600, tolerance=80
 
 🚀直连 = select,DIRECT, hidden=true
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt, 🚀直连 #国内域名
-RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt, 集合 #GFWList
-RULE-SET,https://github.com/laivn/Hello-World/raw/master/ghrule.list, 集合 #GitHub
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Telegram.list, 集合 #Telegram
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Twitter.list, 集合 #Twitter
-RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Google.list, 集合 #Google
-DOMAIN-SUFFIX,smtp,DIRECT
-DOMAIN-KEYWORD,aria2,DIRECT
-DOMAIN,clash.razord.top,DIRECT
-DOMAIN-SUFFIX,lancache.steamcontent.com,DIRECT
-
-# DOMAIN-SUFFIX,live.cn,🚀直接连接
-
-
-
+RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt, 🚀直连
+RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt, 集合
+RULE-SET,https://github.com/laivn/Hello-World/raw/master/ghrule.list, 集合
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Telegram.list, 集合
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Twitter.list, 集合
+RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Google.list, 集合
+RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list, 🇺🇸美国
 GEOIP,CN,DIRECT
 FINAL,DIRECT
 
