modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -72,6 +72,7 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 🚀直连 = select,DIRECT, hidden=true
 
 [Rule]
+DOMAIN-KEYWORD,gemini, 🇺🇸美国
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt, 🚀直连
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt, 集合
 RULE-SET,https://github.com/laivn/Hello-World/raw/master/ghrule.list, 集合
