modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -73,13 +73,15 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 
 [Rule]
 DOMAIN-KEYWORD,gemini, 🇺🇸 美国
-RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt, 🚀 直连
+RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt, 集合
 RULE-SET,https://github.com/laivn/Hello-World/raw/master/ghrule.list, 集合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Telegram.list, 集合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Twitter.list, 集合
 RULE-SET,https://github.com/Repcz/Tool/raw/X/Clash/Rules/Google.list, 集合
 RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AI.list, 🇺🇸 美国
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_Domain.list,DIRECT
+RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list,DIRECT
 GEOIP,CN,DIRECT
 FINAL,DIRECT
 
