modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -67,7 +67,7 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 
 🇯🇵 日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)日|jp|japan", interval=600, tolerance=80
 
-🌐 其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)^(?!.*(?:🇭🇰|🇯🇵|🇺🇸|🇸🇬|🇨🇳|港|hk|hongkong|台|tw|taiwan|日|jp|japan|新|sg|singapore|美|us|unitedstates)).*" interval=600, tolerance=80
+🌐 其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)^(?!.*(?:🇭🇰|🇯🇵|🇺🇸|🇸🇬|🇨🇳|港|hk|hongkong|台|tw|taiwan|日|jp|japan|新|sg|singapore|美|us|unitedstates)).*", interval=600, tolerance=80
 
 🚀 直连 = select,DIRECT, hidden=true
 
