--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -45,9 +45,9 @@ localhost = 127.0.0.1
 
 # assign '8.8.8.8' as dns server for 'bar.com'
 # bar.com = server:8.8.8.8
-[Panel]
-SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
-SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
+# [Panel]
+# SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
+# SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
 
 [Proxy]
 # build in policy
