modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -56,11 +56,11 @@ REJECT = reject
 
 
 [Proxy Group]
-SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=86400, hidden=true
+SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, hidden=true
 
-FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=86400, hidden=true
+FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, hidden=true
 
-🔰 全局代理 = select, 🇭🇰香港, 🇺🇸美国, 🇯🇵日本, 🚀直连, 🌏整合
+🔰 全局代理 = select, 🇭🇰香港, 🇺🇸美国, 🇯🇵日本, 🚀直连, 🌏整合, 🌐其他
 
 🌏整合 = url-test, include-other-group=SSP, include-other-group=FacMata, interval=600, tolerance=80
 
@@ -70,7 +70,7 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 
 🇯🇵日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)日本|JPY|japan", interval=600, tolerance=80
 
-# 🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=^((?!香港|HKG|Hong Kong|美|USA|unitedstates|united states|日本|JPY|japan|新加坡|SGP|TWN|台湾|).)*$, interval=600, tolerance=80
+🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=^((?!香港|HKG|Hong Kong|美|USA|unitedstates|united states|日本|JPY|japan|新加坡|SGP|TWN|台湾|).)*$, interval=600, tolerance=80
 
 🚀直连 = select,DIRECT, hidden=true
 
