--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -60,7 +60,7 @@ SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api
 
 FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=86400, hidden=true
 
-🔰 全局代理 = select, 🇭🇰香港, 🇺🇸美国, 🇯🇵日本, 🚀直连, 🌏整合, 🌐其他
+🔰 全局代理 = select, 🇭🇰香港, 🇺🇸美国, 🚀直连, 🌏整合, 🌐其他
 
 🌏整合 = url-test, include-other-group=SSP, include-other-group=FacMata, interval=600, tolerance=80
 
@@ -68,7 +68,7 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 
 🇺🇸美国 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)美国|USA|unitedstates|united states", interval=600, tolerance=80
 
-🇯🇵日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)日本|JPY|japan", interval=600, tolerance=80
+# 🇯🇵日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)日本|JPY|japan", interval=600, tolerance=80
 
 🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="^((?!香港|HKG|Hong Kong|美|USA|unitedstates|united states|日本|JPY|japan|新加坡|SGP|TWN|台湾|).)*$", interval=600, tolerance=80
 
