modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -46,8 +46,8 @@ localhost = 127.0.0.1
 # assign '8.8.8.8' as dns server for 'bar.com'
 # bar.com = server:8.8.8.8
 # [Panel]
-# SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
-# SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
+SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
+SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
 
 [Proxy]
 # build in policy
@@ -60,17 +60,17 @@ SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api
 
 FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=86400, hidden=true
 
-🔰 全局代理 = select, 🇭🇰香港, 🇺🇸美国, 🚀直连, 🌏整合, 🌐其他
+🔰 全局代理 = select, 🇭🇰香港, 🇺🇸美国, 🇯🇵日本, 🚀直连, 🌏整合, 🌐其他
 
 🌏整合 = url-test, include-other-group=SSP, include-other-group=FacMata, interval=600, tolerance=80
 
-🇭🇰香港 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)香港|HKG|Hong Kong", interval=600, tolerance=80
+🇭🇰香港 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)香港|HKG, interval=600, tolerance=80
 
-🇺🇸美国 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)美国|USA|unitedstates|united states", interval=600, tolerance=80
+🇺🇸美国 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)美国|USA, interval=600, tolerance=80
 
-# 🇯🇵日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="(?i)日本|JPY|japan", interval=600, tolerance=80
+🇯🇵日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)(日本|JPN), interval=600, tolerance=80
 
-🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter="^((?!香港|HKG|Hong Kong|美|USA|unitedstates|united states|日本|JPY|japan|新加坡|SGP|TWN|台湾|).)*$", interval=600, tolerance=80
+🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=^((?!香港|HKG|美国|USA|日本|JPY|新加坡|SGP|TWN|台湾|).)*$, interval=600, tolerance=80
 
 🚀直连 = select,DIRECT, hidden=true
 
@@ -87,5 +87,3 @@ RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Su
 RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ChinaMax/ChinaMax_No_IPv6.list,DIRECT
 GEOIP,CN,DIRECT
 FINAL,DIRECT
-
-
