modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -70,7 +70,7 @@ FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?to
 
 🇯🇵日本 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)(日本|JPN), interval=600, tolerance=80
 
-🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=^((?!香港|HKG|美国|USA|日本|JPY|新加坡|SGP|TWN|台湾|).)*$, interval=600, tolerance=80
+🌐其他 = url-test, include-other-group=SSP, include-other-group=FacMata, interval=600, tolerance=80
 
 🚀直连 = select,DIRECT, hidden=true
 
