modified:   Surfboard.conf

--- a/Surfboard.conf
+++ b/Surfboard.conf
@@ -1,4 +1,4 @@
-#!MANAGED-CONFIG https://cdn.jsdelivr.net/gh/zuluion/Surfboard-Template-Config@master/Surfboard-Template-Config.conf interval=60 strict=true # subscribe profile url and auto update config
+#!MANAGED-CONFIG https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc interval=43200 strict=true
 [General]
 # Specify dns server used by application
 dns-server = 223.5.5.5, 1.1.1.1, 8.8.8.8,system
@@ -45,9 +45,9 @@ localhost = 127.0.0.1
 
 # assign '8.8.8.8' as dns server for 'bar.com'
 # bar.com = server:8.8.8.8
-# [Panel]
+[Panel]
 SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
-SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
+# SubscribeInfo = title=FacMata®订阅信息, content=上传流量：0.36GB\n下载流量：11.49GB\n剩余流量：11.85GB\n套餐流量：120GB\n到期时间：2025-06-05 11:34:04, style=info
 
 [Proxy]
 # build in policy
@@ -56,13 +56,13 @@ REJECT = reject
 
 
 [Proxy Group]
-SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=86400, hidden=true
+SSP = url-test, policy-path=https://sspinet-zaeoxnowmv.cn-shanghai.fcapp.run/api/v1/client/subscribe?token=26a6ce5b21c8b5a9db301f566f1a6b33, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=43200, hidden=true
 
-FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=86400, hidden=true
+FacMata = url-test, policy-path=https://neo.facal.one/api/v1/client/subscribe?token=85d61f1ec61669786281fc2cadcd4afc, interval=300, policy-regex-filter=^((?!Traffic|Next|Valid|及时|剩余|官|重置|到期|告|续费|更新|系统).)*$, update-interval=43200, hidden=true
 
-🔰 全局代理 = select, 🇭🇰香港, 🇺🇸美国, 🇯🇵日本, 🚀直连, 🌏整合
+🔰 全局代理 = select, 🌏整合, 🇭🇰香港, 🇺🇸美国, 🇯🇵日本, 🚀直连
 
-🌏整合 = url-test, include-other-group=SSP, include-other-group=FacMata, interval=600, tolerance=80
+🌏整合 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)香港|HKG|日本|JPN, interval=600, tolerance=80
 
 🇭🇰香港 = url-test, include-other-group=SSP, include-other-group=FacMata, policy-regex-filter=(?i)香港|HKG, interval=600, tolerance=80
 
